implemented updated application api